# easy-opal

./: .gitignore  LICENSE  README.md  easy-opal  easy-opal.py  install.sh  pyproject.toml  requirements.txt  setup  setup.sh  update
docs/: ARCHITECTURE.md  AWS_VOLUME_TROUBLESHOOTING.md  DIAGNOSTICS.md  PHASE1_PLAN.md  ROADMAP.md  SETUP_CROSS_PLATFORM.md  SSL_CONFIGURATION.md  TROUBLESHOOTING.md
src/: cli.py
src/commands/: backup.py  backup_cmds.py  cert_cmds.py  certs.py  config.py  config_cmds.py  diagnose.py  diagnostic_cmd.py  doctor.py  exec.py  instances.py  lifecycle.py  lifecycle_cmds.py  logs.py  profile_cmds.py  profiles.py  setup.py  setup_cmd.py  support.py  update.py  update_cmd.py  volumes.py
src/core/: __init__.py  agate_config.py  config_manager.py  docker.py  docker_manager.py  environment_detector.py  instance_manager.py  migration.py  nginx.py  nginx_manager.py  secrets_manager.py  ssl.py  ssl_manager.py
src/models/: __init__.py  config.py  enums.py  instance.py
src/presets/: __init__.py
src/services/: __init__.py  agate.py  armadillo.py  armadillo_rock.py  backup.py  certbot.py  database.py  elasticsearch.py  keycloak.py  mailpit.py  mica.py  mongo.py  nginx.py  opal.py  rock.py  watchtower.py
src/templates/: docker-compose.yml.tpl  maintenance.html  nginx-acme.conf.tpl  nginx-http.conf.tpl  nginx.conf.tpl
src/utils/: console.py  crypto.py  diff.py  network.py
tests/: conftest.py  test_core.py  test_migration.py  test_models.py  test_selenium_login.py  test_services.py
