[project]
name = "easy-opal"
version = "0.1.0"
description = "A command-line tool to easily set up and manage OBiBa Opal environments using Docker and NGINX."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "David Sarrat González", email = "david.sarrat@isglobal.org"},
    {name = "Xavier Escribà Montagut", email = "xavier.escriba@isglobal.org"},
    {name = "Juan R González", email = "juanr.gonzalez@isglobal.org"}
]
dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0",
    "rich>=13.7.1",
    "requests>=2.31.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0",
]

[project.scripts]
easy-opal = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
# Templates (maintenance.html) are auto-included since they're inside src/
